2005-02-18(jol):
	- Try to fix some memory leaks
	
2005-02-15(jol):
	- now it's possible to connect to a server
	- add the xmpp_auth file which should handle authentification process
	- The first step of authentification is done
	
2005-02-13(jol):
	- Add connection control inside egxp. So it's now possible to connect/disconnect 
	  and get/send message to a server.
	- Add a first support to jid (malloc and free :)
	- Add a beginning to send xmpp message.
	- Update the xmpp test example. You can only connect to a server. 
	  But the test code allow you to understand how the future will be to add 
	  jabber extension protocol.
	- Minor fix and improvement.
	- begin the xmpp part.
	- add the extension concept inside the Egxp structure
	
2005-02-12(jol):
	- factorize some code inside egxp_protocol_handler.
	- finished the protocol handler xml part.
	
2005-02-10(jol):
	- replace free statement with the EFL FREE macro
	- fix some error around the callback stuff ...
	- continue the work on egxp_protocol_handler. Now, we are able to
	get the protocol node in function of the received message.
	- add some documentation around egxp_node
	
2005-02-09(jol):
	- Remove all complexe stuff, in fact i've remove child* and conditional* because they were too much complexe. I've replaced
	all the stuff in a simple structure.

2005-02-08(jol):
	- During the Egxp_Opcode creation add automaticly the __ROOT__ opcode. It will be used by the egxp as initial node.
	- During the Egxp creation add a root node __ROOT__
	
2005-02-07(jol):
	- do not return pointer with egxp_opcode_get_id
	- add functions to egxp_conditional_node with some helper function
	- update the test example
	- add Egxp_ProtocolHandler
	- configure.ac add depends on expat
	- add the GPL in each source file
	
2005-02-06(jol):
	- fix a memleak from egxp_free
	- add Egxp_ConditionalNode
	- add TODO file